--- a/src/app.css
+++ b/src/app.css
@@ -19,7 +19,7 @@ html {
 	--bg-overflow: rgba(1, 1, 1, 1);
 
 	--fg-overlay: rgba(255, 255, 255, 0.8);
-	--fg-surface: rgba(228, 230, 235, 1);
+	--fg-surface: rgba(184, 184, 184, 1);
 
 	--font-monospace: 'Fira Code Variable', monospace;
 	font-family: 'Karla Variable', sans-serif;
@@ -35,8 +35,9 @@ body {
 }
 
 a {
-	color: #6ab0f3;
+	color: rgba(242, 242, 242, 1);
+	border-bottom: 1px solid rgba(128, 128, 128, 0.4);
 }
 a:hover {
-	color: #5183f5;
+	border-color: rgba(128, 128, 128, 0.8);
 }
