--- a/workspace/atelier/src/app.css
+++ b/workspace/atelier/src/app.css
@@ -48,3 +48,9 @@ a:hover,
 .underlined:hover {
 	text-decoration-color: oklch(0.5999 0 0 / 80%);
 }
+
+:focus,
+:focus-visible {
+	border-radius: calc(var(--rounding-base) / 5);
+	outline: 1px solid var(--color-text);
+}
